# SVRC

./: .gitignore  docker-compose.yml  go.mod  go.sum  readme.md
c/: CMakeLists.txt  conanfile.txt  output.json
c/include/: lz4.h  lz4c.h  snappyc.h  utils.h  zlibc.h  zstd.h  zstdc.h
c/src/: lz4.c  lz4c.c  main.c  snappyc.c  utils.c  zlibc.c  zstd.c  zstdc.c
cpp/src/: test.cpp
golang/: Dockerfile  benchmarks.json  go.mod  go.sum
golang/src/: main.go
golang/src/analysis/: sctf.go
golang/src/compressionLibs/: compressionLibs.go  compression_interface.go  lz4.go  zstd.go
golang/src/network/: network.go  speedcheck.go
python/src/: Dockerfile  main.py
python/src/network/: send.py  server.py
rust/: Dockerfile
src/: benchmarks.json  data.json  format.py  main.go
src/analysis/: liveCalculate.go  sctf.go
src/compressionLibs/: compressionLibs.go  gzip.go  lz4.go  snappy.go  zlib.go  zstd.go
src/network/: network.go  speedcheck.go
testfiles/: testfile.json
